# MultipleObjectTracking

./: .gitignore
MOT/: CMakeLists.txt  blob.cpp  blob.h  main.cpp
